--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.3.8
   firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
   country_picker: ^2.0.8
   phone_number: any
+  otp_text_field: ^1.1.1
+  flutter_otp: ^0.3.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
